[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "akimbo"
description = "Awkward Array Extension for Dataframes"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [
    { name = "Martin Durant", email = "mdurant@anaconda.com" },
]
maintainers = [
    { name = "Martin Durant", email = "mdurant@anaconda.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "awkward>=2.6.5",
    "pyarrow"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  "sphinx",
  "furo",
  "nbsphinx",
  "ipython",
  "pandas", "polars", "dask", "pyarrow", "pandoc", "nbsphinx"
]
test = [
  "pandas", "polars", "dask", "pyarrow", "pytest", "pytest-cov", "numba", "dask-awkward", "distributed"
]

[project.urls]
Homepage = "https://github.com/intake/akimbo"
"Bug Tracker" = "https://github.com/intake/akimbo/issues"

[tool.hatch.version]
source = "vcs"
path = "src/akimbo/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/akimbo/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]
log_cli_level = "DEBUG"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
files = ["src", "tests"]
warn_unused_configs = true
show_error_codes = true
allow_incomplete_defs = false
allow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["awkward.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.8"
reportPrivateImportUsage = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "NotImplementedError",
    "_ipython_key_completions_",
]
fail_under = 75
show_missing = true

[tool.coverage.run]
omit = ["src/akimbo/version.py"]
source = ["src/akimbo"]

[tool.ruff]
ignore = ["E501"]
