[metadata]
name = awkward_pandas
description = Awkward Array Pandas Extension
long_description = file: README.md
long_description_content_type = text/markdown
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    awkward>=1.9.0rc8
    pandas>=1.2
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.extras_require]
test =
    pytest >=6.0
    pytest-cov >=3.0.0

complete =
    %(test)s

docs =
    %(complete)s

[options.packages.find]
where = src
exclude =
    tests

[flake8]
exclude = __init__.py
extend-ignore = E402,E501,W503
